# ChangeLog for app-arch/upx-ucl
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/upx-ucl/ChangeLog,v 1.4 2004/06/24 21:39:07 agriffis Exp $

  24 Mar 2004; Jason Wever <weeve@gentoo.org> upx-ucl-1.24.ebuild:
  Added ~sparc keyword.

  27 Nov 2003; Luca Barbato <lu_zero@gentoo.org> upx-ucl-1.24.ebuild:
  Marked ~ppc

*upx-ucl-1.24 (01 Nov 2003)

  01 Nov 2003; Brandy Westcott brandy@gentoo.org upx-ucl-1.24.ebuild:
  Initial import. Thanks to Daniel Black <dragonheart@tpg.com.au> for the
  ebuild. Closes bug #31493.
