@@ -1,3 +1,5 @@
+MD5 94709940acce874b89e7ebf4a2433950 upx-ucl-1.25.ebuild 837
 MD5 6c972a1ae8e58653eed8bd7b3473d6bd upx-ucl-1.24.ebuild 861
 MD5 78057927d0751c3382e9a901a4e9e6b1 ChangeLog 587
 MD5 7321411d8b47a0a94a230b0a338ca0d2 files/digest-upx-ucl-1.24 64
+MD5 5d3006a2e612fcc16edb9cbe618bc1e7 files/digest-upx-ucl-1.25 64
